header overflow issue fixed

--- a/src/sass/components/010_header.scss
+++ b/src/sass/components/010_header.scss
@@ -2,6 +2,7 @@ header.main {
     padding: 25px 0 20px;
     position: relative;
     z-index: 99;
+    overflow: hidden;
     background-color: $color-primary;
 
     &.fixed {
